--- a/.pigeonposse.yml
+++ b/.pigeonposse.yml
@@ -4,8 +4,8 @@
 
 web:
 
-  - id: "dovenv-monorepo"
-    name: "dovenv-monorepo"
+  - id: "creatium"
+    name: "creatium"
     type: "library"
     subtypes:
       - Bin
@@ -13,8 +13,8 @@ web:
       - Node
     version: "0.0.1"
     description: "Toolkit for make your code workspace easier. Create documentation, add beautiful commits, lint and much more."
-    homepage: "https://github.com/pigeonposse/dovenv"
-    repo: "https://github.com/pigeonposse/dovenv"
+    homepage: "https://github.com/pigeonposse/creatium"
+    repo: "https://github.com/pigeonposse/creatium"
     license: "https://github.com/pigeonposse/backan/blob/main/LICENSE"
     # logo: "https://raw.githubusercontent.com/pigeonposse/binarium/main/docs/public/logo.png"
     # banner: "https://raw.githubusercontent.com/pigeonposse/binarium/main/docs/public/banner.png"
