--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "create-creatium",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "Create a new creatium project",
 	"bugs": {
 		"url": "https://github.com/pigeonposse/creatium/issues",
@@ -38,7 +38,7 @@
 		"test": "vitest run -r src --passWithNoTests"
 	},
 	"dependencies": {
-		"@creatium/core": "workspace:*"
+		"creatium": "workspace:*"
 	},
 	"devDependencies": {
 		"@creatium/repo-config": "workspace:*"
