:memo: docs(core): Add more docs

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@
 # EditorConfig config.
 # #############################################################################
 #
-# @description Used to maintain consistent code formatting across different code editors and IDEs in a software project.
+# @description Used to maintain consistent code formatting across different code editors and TEXT_EDITORs in a software project.
 # @see https://EditorConfig.org
 #
 # #############################################################################
