--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
 		"++": "pnpm -F $@",
 		".": "dovenv",
 		"build": "pnpm -F creatium build && pnpm -F create-creatium build",
+		"push": "pnpm . readmes && pnpm . git push",
+		"release": "changeset && changeset version && pnpm build && changeset publish",
 		"test": "pnpm -F *creatium* test"
 	},
 	"dependencies": {
-		"@changesets/cli": "^2.27.10",
-		"@dovenv/convert": "^0.0.6",
-		"@dovenv/lint": "^0.0.6"
+		"@changesets/cli": "2.27.10",
+		"@dovenv/convert": "0.0.6",
+		"@dovenv/lint": "0.0.6"
 	},
 	"devDependencies": {
 		"@changesets/changelog-github": "0.5.0",
