--- a/package.json
+++ b/package.json
@@ -44,27 +44,22 @@
 		"++": "pnpm -F $@",
 		".": "dovenv",
 		"build": "pnpm -F creatium build && pnpm -F create-creatium build",
-		"push": "pnpm . readmes && pnpm . git push",
-		"release": "changeset && changeset version && pnpm build && changeset publish",
+		"prepare": "dovenv git husky --silent",
 		"test": "pnpm -F *creatium* test"
-	},
-	"dependencies": {
-		"@changesets/cli": "2.27.10",
-		"@dovenv/convert": "0.0.6",
-		"@dovenv/lint": "0.0.6"
 	},
 	"devDependencies": {
 		"@changesets/changelog-github": "0.5.0",
-		"@dovenv/core": "0.0.6",
-		"@dovenv/theme-banda": "0.0.6",
-		"@dovenv/utils": "0.0.6",
+		"@changesets/cli": "2.27.10",
+		"@dovenv/convert": "0.0.19",
+		"@dovenv/core": "0.0.19",
+		"@dovenv/theme-banda": "0.0.19",
 		"@playwright/test": "1.49.0",
 		"@types/node": "22.10.1",
 		"tslib": "2.8.1",
 		"tsx": "4.19.2",
 		"typescript": "5.7.2",
 		"unbuild": "2.0.0",
-		"vitest": "2.1.6"
+		"vitest": "2.1.8"
 	},
 	"packageManager": "pnpm@9.11.0",
 	"engines": {
