--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,17 @@
 {
 	"name": "creatium",
-	"version": "0.1.8",
+	"version": "0.1.9",
 	"description": "Build your create-bins quickly and easily",
+	"keywords": [
+		"cli",
+		"library",
+		"create-bins",
+		"create",
+		"node",
+		"bin",
+		"pigeonposse",
+		"pp"
+	],
 	"bugs": {
 		"url": "https://github.com/pigeonposse/creatium/issues",
 		"email": "dev@pigeonposse.com"
