--- a/package.json
+++ b/package.json
@@ -49,16 +49,15 @@
 	},
 	"devDependencies": {
 		"@changesets/changelog-github": "0.5.0",
-		"@changesets/cli": "2.27.10",
-		"@dovenv/convert": "0.0.19",
-		"@dovenv/core": "0.0.19",
-		"@dovenv/theme-banda": "0.0.19",
-		"@playwright/test": "1.49.0",
-		"@types/node": "22.10.1",
+		"@changesets/cli": "2.27.11",
+		"@dovenv/core": "1.1.4",
+		"@dovenv/theme-pigeonposse": "1.1.4",
+		"@playwright/test": "1.49.1",
+		"@types/node": "22.10.5",
 		"tslib": "2.8.1",
 		"tsx": "4.19.2",
 		"typescript": "5.7.2",
-		"unbuild": "2.0.0",
+		"unbuild": "3.2.0",
 		"vitest": "2.1.8"
 	},
 	"packageManager": "pnpm@9.11.0",
@@ -69,10 +68,13 @@
 	"extra": {
 		"id": "creatium",
 		"productName": "creatium",
+		"libraryId": "creatium",
+		"repoId": "creatium",
+		"shortDesc": "Build your create-bins quickly and easily",
+		"action": "JavaScript Library for creating project templates",
 		"libraryUrl": "https://www.npmjs.com/package/creatium",
 		"licenseUrl": "https://github.com/pigeonposse/creatium/blob/main/LICENSE",
 		"rawRepoUrl": "https://raw.githubusercontent.com/pigeonposse/creatium/tree/main",
-		"libraryId": "creatium",
 		"docsUrl": "https://www.npmjs.com/package/creatium",
 		"collective": {
 			"id": "pigeonposse",
