--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"pigeonposse",
 		"pp"
 	],
-	"homepage": "https://github.com/pigeonposse/creatium",
+	"homepage": "https://creatium.pigeonposse.com",
 	"bugs": {
 		"url": "https://github.com/pigeonposse/creatium/issues",
 		"email": "dev@pigeonposse.com"
@@ -44,14 +44,15 @@
 		"++": "pnpm -F $@",
 		".": "dovenv",
 		"build": "pnpm -F creatium build && pnpm -F create-creatium build",
+		"build-doc": "dovenv predocs && dovenv docs build",
 		"prepare": "dovenv git husky --silent",
 		"test": "pnpm -F *creatium* test"
 	},
 	"devDependencies": {
 		"@changesets/changelog-github": "0.5.0",
 		"@changesets/cli": "2.27.11",
-		"@dovenv/core": "1.1.4",
-		"@dovenv/theme-pigeonposse": "1.1.4",
+		"@dovenv/core": "1.1.5",
+		"@dovenv/theme-pigeonposse": "1.1.5",
 		"@playwright/test": "1.49.1",
 		"@types/node": "22.10.5",
 		"tslib": "2.8.1",
@@ -74,8 +75,16 @@
 		"action": "JavaScript Library for creating project templates",
 		"libraryUrl": "https://www.npmjs.com/package/creatium",
 		"licenseUrl": "https://github.com/pigeonposse/creatium/blob/main/LICENSE",
+		"changelogUrl": "https://github.com/pigeonposse/creatium/blob/main/packages/core/CHANGELOG.md",
+		"contributingUrl": "https://github.com/pigeonposse/.github/blob/main/CONTRIBUTING.md",
 		"rawRepoUrl": "https://raw.githubusercontent.com/pigeonposse/creatium/tree/main",
-		"docsUrl": "https://www.npmjs.com/package/creatium",
+		"docsUrl": "https://creatium.pigeonposse.com",
+		"type": "library",
+		"subtype": [
+			"bin",
+			"cli",
+			"env"
+		],
 		"collective": {
 			"id": "pigeonposse",
 			"name": "PigeonPosse",
