--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "creatium",
-	"version": "0.1.9",
+	"version": "0.1.10",
 	"description": "Build your create-bins quickly and easily",
 	"keywords": [
 		"cli",
@@ -68,5 +68,6 @@
 	"publishConfig": {
 		"access": "public",
 		"registry": "https://registry.npmjs.org/"
-	}
+	},
+	"homepage": "https://creatium.pigeonposse.com/guide/core"
 }
