--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,7 @@
 		"pigeonposse",
 		"pp"
 	],
+	"homepage": "https://creatium.pigeonposse.com/guide/core",
 	"bugs": {
 		"url": "https://github.com/pigeonposse/creatium/issues",
 		"email": "dev@pigeonposse.com"
@@ -48,7 +49,7 @@
 		"@clack/core": "0.3.5",
 		"@clack/prompts": "0.8.2",
 		"boxen": "8.0.1",
-		"chalk": "5.3.0",
+		"chalk": "5.4.1",
 		"columnify": "1.6.0",
 		"conf": "13.1.0",
 		"deepmerge-ts": "7.1.3",
@@ -68,6 +69,5 @@
 	"publishConfig": {
 		"access": "public",
 		"registry": "https://registry.npmjs.org/"
-	},
-	"homepage": "https://creatium.pigeonposse.com/guide/core"
+	}
 }
