--- a/.github/workflows/release-docs.yml
+++ b/.github/workflows/release-docs.yml
@@ -10,6 +10,9 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 env:
     GITHUB_TOKEN: ${{ github.token }}
+    DOCS_ID: 'creatium'
+    DOCS_DIR: 'build/docs'
+    BUILD_CMD: 'pnpm build && pnpm build-doc'
 
 ###############################################################################
 # JOBS
@@ -18,8 +21,6 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      UPDATED_VERSION: ${{ github.event.inputs.version }}
 
     steps:
 
@@ -43,29 +44,27 @@ jobs:
         run: |
            export npm_config_build_from_source=false
            pnpm install --no-frozen-lockfile --ignore-scripts
+           pnpm i -g wrangler 
 
       #########################################################################
       # BUILD
       #########################################################################
 
       - name: 🏗 Build packages
-        run: pnpm build
-      - name: 🏗 Build docs
-        run: pnpm build-doc
+        run: ${{env.BUILD_CMD}}
 
       ###################################################################
       # BUILD AND DEPLOY
       ###################################################################
 
       - name: 🌥 Deploy in cloudflare pages
-        uses: cloudflare/pages-action@v1
+        uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy ${{env.DOCS_DIR}} --project-name=${{env.DOCS_ID}}
+          # Optional: Enable this if you want to have GitHub Deployments triggered
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
-          projectName: "creatium"
-          directory: 'build/docs'
-          wranglerVersion: '3'
+          packageManager: pnpm
 
 ###############################################################################
