--- a/package.json
+++ b/package.json
@@ -44,21 +44,21 @@
 		"++": "pnpm -F $@",
 		".": "dovenv",
 		"build": "pnpm -F creatium build && pnpm -F create-creatium build",
+		"build-assets": "dovenv docs generate-assets --flag=\"--preset minimal\" --flag=\"docs/public/logo.png\"",
 		"build-doc": "dovenv predocs && dovenv docs build",
 		"prepare": "dovenv git husky --silent",
 		"test": "pnpm -F *creatium* test"
 	},
 	"devDependencies": {
 		"@changesets/changelog-github": "0.5.0",
-		"@changesets/cli": "2.27.11",
-		"@dovenv/core": "1.1.5",
-		"@dovenv/theme-pigeonposse": "1.1.5",
+		"@dovenv/core": "1.2.2",
+		"@dovenv/theme-pigeonposse": "1.2.2",
 		"@playwright/test": "1.49.1",
-		"@types/node": "22.10.5",
+		"@types/node": "22.10.6",
 		"tslib": "2.8.1",
 		"tsx": "4.19.2",
-		"typescript": "5.7.2",
-		"unbuild": "3.2.0",
+		"typescript": "5.7.3",
+		"unbuild": "3.3.1",
 		"vitest": "2.1.8"
 	},
 	"packageManager": "pnpm@9.11.0",
