--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
 	"private": true,
 	"description": "Build your create-bins quickly and easily",
 	"keywords": [
-		"env",
-		"devs",
-		"development",
-		"js",
-		"ts",
+		"bin",
+		"binaries",
 		"cli",
+		"development",
+		"devs",
+		"env",
+		"js",
 		"library",
 		"node",
-		"binaries",
-		"bin",
 		"pigeonposse",
-		"pp"
+		"pp",
+		"ts"
 	],
 	"homepage": "https://creatium.pigeonposse.com",
 	"bugs": {
@@ -44,24 +44,32 @@
 		"++": "pnpm -F $@",
 		".": "dovenv",
 		"build": "pnpm -F creatium build && pnpm -F create-creatium build",
-		"build-assets": "dovenv docs generate-assets --flag=\"--preset minimal\" --flag=\"docs/public/logo.png\"",
 		"build-doc": "dovenv predocs && dovenv docs build",
+		"core": "pnpm -F creatium",
+		"lint:eslint": "node --run . -- lint eslint",
+		"lint:pkg": "node --run . -- lint custom -k pkg",
+		"lint:staged": "node --run . -- lint staged --silent",
 		"prepare": "dovenv git husky --silent",
-		"test": "pnpm -F *creatium* test"
+		"test": "pnpm run --sequential \"/test:.*/\"",
+		"test:check": "pnpm --parallel check",
+		"test:check-ws": "node --run . -- check --silent",
+		"test:pkg": "pnpm --parallel test",
+		"test:transform-ws": "node --run . -- transform --silent"
 	},
 	"devDependencies": {
-		"@changesets/changelog-github": "0.5.0",
-		"@dovenv/core": "1.2.2",
-		"@dovenv/theme-pigeonposse": "1.2.2",
-		"@playwright/test": "1.49.1",
-		"@types/node": "22.10.6",
+		"@changesets/changelog-github": "0.5.1",
+		"@dovenv/core": "1.5.12",
+		"@dovenv/theme-pigeonposse": "1.5.12",
+		"@playwright/test": "1.52.0",
+		"@types/node": "22.15.21",
+		"eslint": "9.27.0",
 		"tslib": "2.8.1",
-		"tsx": "4.19.2",
-		"typescript": "5.7.3",
-		"unbuild": "3.3.1",
-		"vitest": "2.1.8"
+		"tsx": "4.19.4",
+		"typescript": "5.8.3",
+		"unbuild": "3.5.0",
+		"vitest": "3.1.4"
 	},
-	"packageManager": "pnpm@9.11.0",
+	"packageManager": "pnpm@10.11.0",
 	"engines": {
 		"node": ">=20.0.0",
 		"pnpm": ">=8.10.0"
