--- a/packages/_config/package.json
+++ b/packages/_config/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "@creatium/repo-config",
-	"version": "0.1.11",
+	"version": "0.1.13",
 	"private": true,
+	"description": "Config for monorepo",
 	"homepage": "https://creatium.pigeonposse.com/guide/config/repo-config",
 	"bugs": {
 		"url": "https://github.com/pigeonposse/creatium/issues",
