--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,8 @@
 packages:
-  - 'packages/*'
-#   - 'packages/config/*'
+  - packages/*
+onlyBuiltDependencies:
+  - core-js-pure
+  - esbuild
+  - sharp
+  - unrs-resolver
+  - vue-demi
