--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,7 +26,7 @@
 		"type": "individual",
 		"url": "https://pigeonposse.com/?popup=donate"
 	},
-	"license": "GPL-3.0",
+	"license": "MIT",
 	"author": {
 		"name": "Angelo",
 		"email": "angelo@pigeonposse.com",
@@ -54,7 +54,7 @@
 	"scripts": {
 		"build": "unbuild",
 		"dev": "pnpx tsx examples/simple/bin.ts",
-		"example": "run(){ tsx examples/\"${@:1}\"/bin.ts; }; run $@",
+		"example": "run(){ pnpx tsx examples/\"${@:1}\"/bin.ts; }; run $@",
 		"size": "pnpm dlx @sizium/cli -i ./ --res info",
 		"test": "vitest run -r src --passWithNoTests"
 	},
