--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
 		"packages/*"
 	],
 	"scripts": {
-		"+": "run() { pnpm -F @creatium-js/\"${@:1}\"; }; run $@",
-		"++": "pnpm -F $@",
+		"+": "pnpm -F",
 		".": "dovenv",
 		"build": "pnpm -F utils build && pnpm -F creatium build && pnpm -F create-creatium build",
 		"build-doc": "dovenv predocs && dovenv docs build",
