--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,14 @@
 packages:
   - packages/*
+
 onlyBuiltDependencies:
   - core-js-pure
   - esbuild
   - sharp
   - unrs-resolver
   - vue-demi
+
+overrides:
+  '@eslint/plugin-kit@<0.3.4': '>=0.3.4'
+  esbuild@<=0.24.2: '>=0.25.0'
+  tmp@<=0.2.3: '>=0.2.4'
