--- a/package.json
+++ b/package.json
@@ -57,18 +57,19 @@
 		"test:transform-ws": "dovenv transform --silent"
 	},
 	"devDependencies": {
-		"@changesets/changelog-github": "0.5.1",
-		"@dovenv/core": "1.6.1",
-		"@dovenv/theme-pigeonposse": "1.6.1",
-		"@types/node": "24.2.1",
-		"eslint": "9.33.0",
+		"@changesets/changelog-github": "0.5.2",
+		"@changesets/cli": "2.29.8",
+		"@dovenv/core": "~1.6.1",
+		"@dovenv/theme-pigeonposse": "~1.6.1",
+		"@types/node": "25.0.9",
+		"eslint": "9.39.2",
 		"tslib": "2.8.1",
-		"tsup": "8.5.0",
-		"typescript": "5.9.2",
-		"unbuild": "3.6.0",
-		"vitest": "3.2.4"
+		"tsup": "8.5.1",
+		"typescript": "5.9.3",
+		"unbuild": "3.6.1",
+		"vitest": "4.0.17"
 	},
-	"packageManager": "pnpm@10.14.0",
+	"packageManager": "pnpm@10.28.0",
 	"engines": {
 		"node": ">=20.0.0",
 		"pnpm": ">=8.10.0"
