--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "creatium",
-	"version": "0.2.5",
+	"version": "0.2.6",
 	"description": "Build your create-bins quickly and easily",
 	"keywords": [
 		"bin",
@@ -57,9 +57,9 @@
 		"test": "vitest run -r src --passWithNoTests"
 	},
 	"dependencies": {
-		"@clippium/preset-colored": "1.0.2",
-		"@clippium/updater": "1.0.2",
-		"clippium": "1.0.2"
+		"@clippium/preset-colored": "~1.0.2",
+		"@clippium/updater": "~1.0.2",
+		"clippium": "~1.0.2"
 	},
 	"devDependencies": {
 		"@creatium-js/repo-config": "workspace:*"
